--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -20,7 +20,7 @@
  je_palaiologos_reforms_syria: "Palaiologos Reforms: Reclaim Syria"
  je_palaiologos_reforms_syria_reason: "Syria has been lost to the tyrant of Aegypt, who stole his dominion from our rightful hands. We must reclaim it!"
  je_palaiologos_reforms_egypt: "Palaiologos Reforms: Reclaim Aegypt"
- je_palaiologos_reforms_egypt_reason: "With Syria recaptured, we should turn our attention to Aegypt. Rightfully an [ROOT.GetCountry.GetName] possession, it has fallen into the hands of a usurper."
+ je_palaiologos_reforms_egypt_reason: "The Komnenoi were once emperors of the Roman world—but their time is long past. Though they now rule from the Nile, cloaked in borrowed glory and propped up by foreign coin, their continued defiance is an affront to the imperial order. They do not reign by right, but by rebellion. Our dynasty was chosen—by tradition, by law, and by divine will—to bear the imperial diadem. While the Komnenoi cling to delusions of grandeur in Aegypt, we bear the true legacy of Romaion. Their throne is a splintered relic. Ours is the seat of empire. The Basileía Romaíon cannot be whole while a false crown rests upon the Nile. The Komnenoi must be made to kneel, not merely as rulers of a province—but as subjects of the one true Emperor. Let them swear fealty, or be swept into history."
  je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Afrika"
  je_palaiologos_reforms_africa_reason: "We should turn our attention to Afrika. Our influence in the region is dependent on our relations with the breakaway Exarchate. By reestablishing formal dominion over our rightful possesion, our domination would be assured."
  je_palaiologos_reforms_italy: "Palaiologos Reforms: Reclaim Italia"
@@ -103,23 +103,18 @@
   #Moldova
  je_army_modernization: "Army reform and modernization"
  je_army_modernization_reason: "With potential enemies on all sides we need to start modernizing our army and build a local arms industry to protect and expand our interests in the Danubian Region."
-
  je_side_russia: "A Golden Offer"
  je_side_russia_reason: "Our efforts to reform and modernize have not gone unnoticed, the Golden Horde is preparing an offer for us, but what could they possibly want?"
-
  je_conquer_wallachia_dobruja: "Liberate Wallachia and Dobruja"
  je_conquer_wallachia_dobruja_reason: "With the Tatars backing we can now liberate Wallachia and Dobruja from the oppressive southern br_modifier_boyars and their Hungarian allies."
-
  je_form_greater_romania_mol: "Form Greater Vlachia"
  je_form_greater_romania_mol_reason: "With our unification completed, we must strive to unite all our brothers and sisters across the Carpathians and embark on a \"special military operation\" against the Hungarians to achieve our independence once and for all."
 
   #Wallachia
  je_little_union: "The Little Union"
  je_little_union_reason: "By abusing loopholes in our treaties with the Great Powers, it is possible to enter in a personal union with Moldavia by electing a ruler in both nations. The Powers will not like it, but they will be powerless to stop our march towards the Union."
-
  je_secure_dobruja: "War of Independence"
  je_secure_dobruja_reason: "The time has come to liberate Dobruja and gain our independence from the Hungarian Empire."
-
  je_form_greater_romania: "Form Greater Vlachia"
  je_form_greater_romania_reason: "Now with our independence secured we must strive to unite all our brothers and sisters across the Carpathians and the Pruth river."
 
@@ -127,72 +122,57 @@
  je_the_revolution: "The Revolution"
  je_the_revolution_reason: "The situation in the HRE has grown desperate and the people have had enough. If we don’t do anything then the situation could get out of control and our 1000 year government could be overthrown. We will have to consider carefully how to deal with the situation, do we reform the state or do we choose to suppress these so-called revolutionaries. In case we fail to do anything the consequences could be disastrous."
  finished_revolution_tt: "We have dealt with the revolution in a manner of our choice."
-
  je_revolution_reform: "Revolution: Reform"
  je_revolution_reform_reason: "The time has come to reform the state in order to halt a revolution."
-
  je_revolution_suppress: "Revolution: Suppress"
  je_revolution_suppress_reason: "We will not bow to the demands of the people, the state will remain as is."
-
  je_national_identity: "National Identity"
  je_national_identity_reason: "We must decide who we are are we Roman or French?"
  br_enbraced_an_identity_tt: "We have chosen which identity to embrace."
-
  je_identity_embrace_our_roman_identity: "National Identity: Embrace our Roman Identity"
  je_identity_embrace_our_roman_identity_reason: "We are Roman first and foremost."
-
  je_identity_embrace_french: "National Identity: Embrace our French Identity"
  je_identity_embrace_french_reason: "We must abandon the Idea that we are Roman. We are French."
-
  je_roman_reconquest: "Roman Reconquest"
  je_roman_reconquest_reason: "We must reestablish our authority as emperor of the Romans by starting with reconquering the lost western territories."
  je_roman_reconquest_goal: "We have completed all the Roman Reconquest journals."
  je_roman_reconquest_advance_tt: "Advances the Journal Entry 'Roman Reconquest'"
-
  je_retaking_the_heart_of_roman_civilization: "Roman Reconquest: Retaking the heart of Roman Civilization"
  je_retaking_the_heart_of_roman_civilization_reason: "Italia is was the heartland of the Roman Empire how can we call ourselves Romans without it? It's time we reconquered it."
-
  je_retaking_southern_italy: "Roman Reconquest: Retaking Southern Italy"
  je_retaking_southern_italy_reason: "Italia is was the heartland of the Roman Empire how can we call ourselves Romans without it? It's time we reconquered it."
-
  je_reconquer_iberia: "Roman Reconquest: Reconquer Iberia"
  je_reconquer_iberia_reason: "Iberia was a rich and important province of the Empire, we should retake it."
-
  je_reconquer_roman_north_africa: "Roman Reconquest: Reconquer Roman North Africa"
  je_reconquer_roman_north_africa_reason: "We should retake the African territories that were once Roman."
-
  je_reconquer_england_and_wales: "Roman Reconquest: Reconquer Britannia"
  je_reconquer_england_and_wales_reason: "Reconquer Britannia"
-
  je_reconquer_scotland: "Roman Reconquest: Conquer Caledonia"
  je_reconquer_scotland_reason: "Conquer Scotland"
-
  je_reconquer_ireland: "Roman Reconquest: Conquer Hibernia"
  je_reconquer_ireland_reason: "Conquer Ireland."
 
+ #Flanders
  #je_control_the_lowlands_main
  je_control_the_lowlands_main: "Control the Lowlands"
  je_control_the_lowlands_main_goal: "Complete 2 'Lowland' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
  je_control_the_lowlands_main_reason: "Since the Middle Ages, the lowlands have been one of the richest regions in Europe. Out of all the rivaling states, Flanders was the strongest. But a lot has changed since then, our French rulers are stronger than ever, and the days of small independent lords are over, so before we can break away from their domination, we must centralise and strengthen our control over the region."
-
  #je_control_the_northern_lowlands
  je_control_the_northern_lowlands: "Control the Northern Lowlands"
  #je_control_the_northern_lowlands_goal: "We must establish our control over the northern lowlands."
  je_control_the_northern_lowlands_reason: "We must establish our control over the northern lowlands."
-
  #je_control_the_southern_lowlands
  je_control_the_southern_lowlands: "Control the Southern Lowlands"
  #je_control_the_southern_lowlands_goal:0 "We must establish our control over the southern lowlands."
  je_control_the_southern_lowlands_reason: "We have to gain control over the southern regions, perhaps we can request control over these regions from our overlord."
-
  je_control_the_lowlands_advance: "Advances the Journal Entry 'Control the Lowlands'"
-
  #je_princely_league_main
  je_princely_league_main: "Princely League"
  #je_princely_league_main_goal:0 "???"
  je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
  princely_league_exists_tt: "The Gemanic League exists."
 
+ 
  je_reclaim_england: "Reclaim England"  
  je_reclaim_england_reason: "Having secured our freedom, it's time to reclaim our rightful lands."  
  je_conquer_wales: "Subjugate Wales"  
@@ -205,22 +185,22 @@
  je_reclaiming_armenia_reason: "Eastern Armenia must be fully reincorporated into our realm."
  je_restore_serbia: "Restore Serbia"
  je_restore_serbia_reason: "Autonomous princelings must be fully reincorporated into our realm."
- je_br_gain_independence: "Gain Independence"
- je_br_gain_independence_reason: "Gain our Independence"
+ je_br_gain_independence: "The Struggle for Sovereignty"
+ je_br_gain_independence_reason: "We are ruled, but not governed. Bound by treaties, tributes, or the weight of foreign crowns, our people remain denied their rightful voice and destiny. The time has come to cast off the yoke. Whether through arms, diplomacy, or perseverance, we must seize our independence—not as a gift, but as a claim long delayed. No great nation was born free; it was made free."
  je_br_east_indies_trade: "Control trade in the East Indies"
  je_br_east_indies_trade_reason: "Control trade in the East Indies"
  je_br_west_indies_trade: "Control trade in the West Indies"
  je_br_west_indies_trade_reason: "Control trade in the West Indies"
  je_control_nile: "Control Nile"
- je_control_nile_reason: "Control Nile"
- je_restore_russia: "Restore Russia"
- je_restore_russia_reason: "Autonomous princelings must be fully reincorporated into our realm."
- je_elysium_expand_01: "Manifest Destiny"
- je_elysium_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
- je_vineland_expand_01: "Manifest Destiny"
- je_vineland_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
- je_australis_expand_01: "Manifest Destiny"
- je_australis_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
+ je_control_nile_reason: "Our authority flows where the Nile flows. To rule Aegypt is not merely to hold the cities of the delta—it is to command the river from its mouth to its distant source. The Nubian kingdoms to the south remain beyond our reach—fractured, defiant, and vulnerable. As long as they remain independent, our southern frontier is exposed and our legacy incomplete. To secure the Nile Valley is to restore order, reclaim wealth, and fulfill the ancient mandate of Aegyptian rule. The river must flow under one banner—ours."
+ je_restore_russia: "The Gathering of the Rus"
+ je_restore_russia_reason: "Once, the lands of the Rus’ burned bright—princes ruled from snow-covered citadels, churches rang with Slavic chant, and riders watched the forests from wooden palisades. But that time is long past. The Mongol storm shattered the old unity. Now the land lies broken, scattered beneath foreign crowns and golden tribute. Novgorod and Pskov bend the knee to the north. The Ruthenian princes serve the will of the Commonwealth. And the rest—Muscovy among them—bow to Tartaria, passing coin up the chain like blood to a distant heart. But the memory of unity has not died. The dream of a single Russia, sovereign and whole, lingers in every hilltop kremlin and Orthodox bell tower. To realize that dream will take more than ambition—it will take strength, vision, and the will to defy the tribute-takers and false guardians alike. We must gather the scattered branches of Rus’ and make them a tree once more.."
+ je_elysium_expand_01: "The Mandate of the West"
+ je_elysium_expand_01_reason: "Once a distant outpost of the Basileía Romaíon, Elysium has since become something greater—a civilization reborn, forged in struggle, philosophy, and faith. Now, as its cities swell and its armies march, a question looms ever larger: shall we inherit this continent, or leave it to lesser powers? Some claim we are strangers in this land. But our blood, our law, our gods, and our tongue have taken root. We are no longer colonists—we are Elysians. The old world fractured. We endured. Now, the land opens before us, waiting not for conquest, but for unification. To falter now would betray our destiny."
+ je_vineland_expand_01: "Claim of the Old Blood"
+ je_vineland_expand_01_reason: "Our forefathers crossed the storm-wracked seas to escape the death of their gods and the fading of the old ways. They carved a home from ice and stone, fought beast and man alike, and gave us Vinland. Now, the ancient call of the land echoes once more—not to retreat, but to expand. Forest, fjord, and plain lie ahead, wild and vast, teeming with spirits both forgotten and reborn. Others may see wilderness; we see inheritance. The old blood stirs. The time has come to shape this land in our image, not by treaty, but by will."
+ je_australis_expand_01: "Beneath a New Sun"
+ je_australis_expand_01_reason: "Far from the marble halls of old empires and the myths of ancient seas, Antipodeia was born—not of conquest, but of vision. Here, under foreign constellations, a new world has taken shape, carried on the backs of settlers, philosophers, and exiles. Now the interior calls. The rivers run wide, the earth is rich, and the horizon dares us forward. Others may hesitate, divided by custom or fear. But we were not built to hesitate. The frontier is not a barrier—it is a beginning. This land is ours to unify, to cultivate, to illuminate."
  je_tartaria_steppe_expansion: "Steppe Expansion"
  je_tartaria_steppe_expansion_reason: "Expand Eastward further into the Steppe and Siberia."
  je_japanese_siberia_expansion: "Shiberia Expansion"
@@ -233,16 +213,16 @@
  je_consolidate_india_01_reason: "Our Control over certain regions has been lost in all but name as Governors have entreched themselves."
  je_br_colonial_subject: "Colonial Subject"
  je_br_colonial_subject_reason: "We enjoy subsidies and protection of our mother country."
- je_br_new_world_colony: "New World Colony"
- je_br_new_world_colony_reason: "New World Colony."
- je_br_africa_colony: "Africa Colony"
- je_br_africa_colony_reason: "Africa Colony"
- je_br_independent_new_world_country: "New World Country"
- je_br_independent_new_world_country_reason: "New World Country."
+ je_br_new_world_colony: "Settlers and Soil"
+ je_br_new_world_colony_reason: "Ours is a young land—scarcely settled, scarcely tamed. The cities are few, the fields are wide, and the people are still learning to call this place home. But within this vastness lies promise: untapped resources, fresh identity, and the freedom to shape a society without the burdens of the old world.Though distant from empire, we are not forgotten—we are becoming. For the next century, our mission is not conquest or completion, but cultivation."
+ je_br_africa_colony: "Shores of Promise"
+ je_br_africa_colony_reason: "To settle these shores is to test the will of nations. The land is rich, vast, and merciless—its rivers wide, its peoples proud, its heartlands still untamed. Colonies here do not grow in peace; they grow in challenge. But beneath the dust lies opportunity. Coastal outposts become trade hubs, distant valleys yield harvests, and cities may rise where once there was only stone and scrub. This is no easy beginning—but it may one day be remembered as a foundation that changed the world."
+ je_br_independent_new_world_country: "Settlers and Soil"
+ je_br_independent_new_world_country_reason: "Ours is a young land—scarcely settled, scarcely tamed. The cities are few, the fields are wide, and the people are still learning to call this place home. But within this vastness lies promise: untapped resources, fresh identity, and the freedom to shape a society without the burdens of the old world.Though distant from empire, we are not forgotten—we are becoming. For the next century, our mission is not conquest or completion, but cultivation."
  je_br_inward_perfection: "Inward Perfection"
  je_br_inward_perfection_reason: "We have shut ourselves off from foreign peoples and their ideas, perhaps its time to open up and modernize?"
- je_tartaria_modernize: "Modernize Tartaria"
- je_tartaria_modernize_reason: "We should modernize our society or risk falling further behind."
+ je_tartaria_modernize: "The Winds of Change"
+ je_tartaria_modernize_reason: "Our ancestors ruled on horseback, their word law from the grasslands to the mountains. We were feared, swift, and unconquered. But the world no longer bows to the rider or the sword. It now belongs to machines, to coin, to cities that never sleep. Tartaria stands at a crossroads, to cling to our old ways is to risk decay; to embrace reform is to risk our soul. But if we do not act—if we do not modernize—then we will not lead, we will follow. And Tartaria was not born to follow."
  je_tartaria_end_slavic_oppression: "End Slavic Oppression"
  je_tartaria_end_slavic_oppression_reason: "We should stop Oppressing our Slavic and other minorities so that they may contribute to our growth."
  je_br_mediterranean_merchant_republic: "Merchant Republic"
@@ -264,7 +244,7 @@
  je_br_tithe_profits: "Alms of St Peter"
  je_br_tithe_profits_reason: "Peter's Pence (or Denarii Sancti Petri and "Alms of St Peter") are donations or payments made directly to the Holy See of the Catholic Church."
  je_restore_north_italy: "Unite Italia settentrionale"  
- je_restore_north_italy_reason: "We should seek to unite all of Italia settentrionale into our state."  
+ je_restore_north_italy_reason: "The northern heart of Italia remains fractured—city-states, republics, duchies, and principalities all clinging to old rivalries, old borders, and old ambitions. But the world is changing, and with it, the fortunes of fragmented nations. To secure our future, we must look beyond ancient divisions. From the Alpine passes to the Po Valley and the Adriatic coast, our strength lies in unity. If we are to thrive in the new century, we must bring all of Italia settentrionale under a single banner—our banner."  
  je_china_reforms_navy: "Naval Reform"
  je_china_reforms_navy_reason: "The navy is highly decentralized with each region commanding its own local navies. Renovating the navy by developing our officer corps, fielding new detachments and outfitting new, larger ships must be a priority."
  
