--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -201,26 +201,26 @@
  je_vineland_expand_01_reason: "Our forefathers crossed the storm-wracked seas to escape the death of their gods and the fading of the old ways. They carved a home from ice and stone, fought beast and man alike, and gave us Vinland. Now, the ancient call of the land echoes once more—not to retreat, but to expand. Forest, fjord, and plain lie ahead, wild and vast, teeming with spirits both forgotten and reborn. Others may see wilderness; we see inheritance. The old blood stirs. The time has come to shape this land in our image, not by treaty, but by will."
  je_australis_expand_01: "Beneath a New Sun"
  je_australis_expand_01_reason: "Far from the marble halls of old empires and the myths of ancient seas, Antipodeia was born—not of conquest, but of vision. Here, under foreign constellations, a new world has taken shape, carried on the backs of settlers, philosophers, and exiles. Now the interior calls. The rivers run wide, the earth is rich, and the horizon dares us forward. Others may hesitate, divided by custom or fear. But we were not built to hesitate. The frontier is not a barrier—it is a beginning. This land is ours to unify, to cultivate, to illuminate."
- je_tartaria_steppe_expansion: "Steppe Expansion"
- je_tartaria_steppe_expansion_reason: "Expand Eastward further into the Steppe and Siberia."
- je_japanese_siberia_expansion: "Shiberia Expansion"
- je_japanese_siberia_expansion_reason: "Expand Deeper into Shiberia."
- je_persia_expansion_01: "Afganistan"
- je_persia_expansion_01_reason: "Our Control over the region has devolved into a patch work of autonomous Satrapies."
- je_persia_expansion_02: "Central Asia"
- je_persia_expansion_02_reason: "The Central Asian Khanates should be brought under direct Persian rule."
- je_consolidate_india_01: "Consolidate Rule"
- je_consolidate_india_01_reason: "Our Control over certain regions has been lost in all but name as Governors have entreched themselves."
+ je_tartaria_steppe_expansion: "Expansion into the Steppe"
+ je_tartaria_steppe_expansion_reason: "Beyond the rivers and ridgelines of our frontier lies the boundless grassland of the eastern steppe. To expand into Siberia is to reclaim the spirit of the riders—of the khans who once ruled from horizon to horizon. We must press eastward and restore the reach of Tartaria."
+ je_japanese_siberia_expansion: "Shiberian Ambition"
+ je_japanese_siberia_expansion_reason: "The cold, untamed expanse of Shiberia lies before us—rich in resources, distant from prying powers, and waiting for order. To secure this land is not only a matter of strategy, but a statement of strength. The Shogunate must move northward."
+ je_persia_expansion_01: "The Eastern Marches"
+ je_persia_expansion_01_reason: "Afghanistan, once the eastern shield of our empire, has drifted into disorder. Its satraps and chiefs act in defiance, and our writ carries little weight. If Persia is to reclaim its destiny, we must restore order to these windswept highlands and remind the east who holds the eternal flame."
+ je_persia_expansion_02: "Echoes of Empire"
+ je_persia_expansion_02_reason: "The deserts and oases of Central Asia once echoed with the banners of Persian kings. Though the khanates have taken root, they sprouted in soil that still remembers our name. The time has come to rekindle the legacy—to bring the steppe back beneath the shadow of the Peacock Throne."
+ je_consolidate_india_01: "Consolidate the Provinces"
+ je_consolidate_india_01_reason: "Many of our governors now rule like kings in their own right—entrenched, autonomous, and disloyal. If we are to be more than a court of titles and whispers, we must bring these wayward provinces back into the fold and restore central authority."
  je_br_colonial_subject: "Colonial Subject"
- je_br_colonial_subject_reason: "We enjoy subsidies and protection of our mother country."
+ je_br_colonial_subject_reason: "We enjoy the subsidies and protection of our mother country—but at the price of sovereignty. Whether this arrangement is a foundation for growth or a gilded chain remains to be seen."
  je_br_new_world_colony: "Settlers and Soil"
  je_br_new_world_colony_reason: "Ours is a young land—scarcely settled, scarcely tamed. The cities are few, the fields are wide, and the people are still learning to call this place home. But within this vastness lies promise: untapped resources, fresh identity, and the freedom to shape a society without the burdens of the old world.Though distant from empire, we are not forgotten—we are becoming. For the next century, our mission is not conquest or completion, but cultivation."
- je_br_africa_colony: "Shores of Promise"
- je_br_africa_colony_reason: "To settle these shores is to test the will of nations. The land is rich, vast, and merciless—its rivers wide, its peoples proud, its heartlands still untamed. Colonies here do not grow in peace; they grow in challenge. But beneath the dust lies opportunity. Coastal outposts become trade hubs, distant valleys yield harvests, and cities may rise where once there was only stone and scrub. This is no easy beginning—but it may one day be remembered as a foundation that changed the world."
+ je_br_africa_colony: "African Frontier"
+ je_br_africa_colony_reason: "Across the sun-scorched coasts and river-carved interiors of Africa, we have planted outposts, missions, and fledgling towns. Yet our presence remains fragile—buffeted by local resistance, unfamiliar climates, and the sheer scale of the land. If we are to survive and thrive, we must cultivate our holdings, secure trade, and grow strong on this storied continent. The frontier awaits our ambition."
  je_br_independent_new_world_country: "Settlers and Soil"
  je_br_independent_new_world_country_reason: "Ours is a young land—scarcely settled, scarcely tamed. The cities are few, the fields are wide, and the people are still learning to call this place home. But within this vastness lies promise: untapped resources, fresh identity, and the freedom to shape a society without the burdens of the old world.Though distant from empire, we are not forgotten—we are becoming. For the next century, our mission is not conquest or completion, but cultivation."
  je_br_inward_perfection: "Inward Perfection"
- je_br_inward_perfection_reason: "We have shut ourselves off from foreign peoples and their ideas, perhaps its time to open up and modernize?"
+ je_br_inward_perfection_reason: "For generations, we have stood apart—self-sufficient, refined, and untouched by the chaos beyond our borders. Foreign ideas have been kept at bay, and foreign powers held at arm's length. This policy of inward perfection has preserved our sovereignty—but at what cost? As the world changes, new technologies, doctrines, and powers rise beyond our walls. We must decide whether to remain steadfast in tradition or step cautiously toward the unfamiliar currents of modernity."
  je_tartaria_modernize: "The Winds of Change"
  je_tartaria_modernize_reason: "Our ancestors ruled on horseback, their word law from the grasslands to the mountains. We were feared, swift, and unconquered. But the world no longer bows to the rider or the sword. It now belongs to machines, to coin, to cities that never sleep. Tartaria stands at a crossroads, to cling to our old ways is to risk decay; to embrace reform is to risk our soul. But if we do not act—if we do not modernize—then we will not lead, we will follow. And Tartaria was not born to follow."
  je_tartaria_end_slavic_oppression: "End Slavic Oppression"
@@ -229,20 +229,20 @@
  je_br_mediterranean_merchant_republic_reason: "Our Republic stands strong, admired by the world for all we have achieved. However, our advantages are not eternal. It is crucial that we safeguard our edge, as our rivals seek to undermine everything we have built."
  je_br_colonial_merchant_republic: "Colonial Merchant State"
  je_br_colonial_merchant_republic_reason: "Colonial Merchant State"
- je_br_baltic_toll_collection_rights: "Control over Baltic trade"
- je_br_baltic_toll_collection_rights_reason: "Having control over trade in the Baltic we are able to collect a toll on all ships."
+ je_br_baltic_toll_collection_rights: "Control over Baltic Trade"
+ je_br_baltic_toll_collection_rights_reason: "The frigid waters of the Baltic Sea carry not only timber, furs, and amber—but power. By securing the chokepoints of this northern trade artery, we exert influence over every merchant fleet and warship that dares pass. The toll we collect is more than revenue; it is a reminder that commerce bends to sovereignty."
  je_br_strait_of_hercules: "Control over the Strait of Hercules"
- je_br_strait_of_hercules_reason: "Having control over Strait of Hercules we are able to collect a toll on all ships."
- je_br_bosphorus_strait_toll: "Control over Bosphorus Straits"
- je_br_bosphorus_strait_toll_reason: "Having control over Bosphorus Straits we are able to collect a toll on all ships."
+ je_br_strait_of_hercules_reason: "Where the Pillars of Hercules rise, the world narrows. From the vast oceans to the inner sea, every vessel must pass this ancient gate. To hold it is to tax the ambitions of empires and kingdoms alike—gold flows to the one who commands the strait."
+ je_br_bosphorus_strait_toll: "Control over the Bosphorus"
+ je_br_bosphorus_strait_toll_reason: "The Bosphorus is no mere waterway—it is the spine of empire, linking two continents and two worlds. Grain, silk, and steel pass through its narrow veins. Those who hold the strait do not simply charge for passage—they shape the fate of trade and empire alike."
  je_br_klysma_canal_toll: "Control over the Klysma Canal"
- je_br_klysma_canal_toll_reason: "Having control over Klysma Canal we are able to collect a toll on all ships."
- je_br_persian_strait_toll: "Control over Persian straits"
- je_br_persian_strait_toll_reason: "Having control over Persian straits we are able to collect a toll on all ships."
- je_br_hajj_profits: "Hajj"
- je_br_hajj_profits_reason: "Having control over Mecca allows us to profit from the pilgrims on Hajj."
+ je_br_klysma_canal_toll_reason: "The Klysma Canal is our bridge between seas—an artery cut through the desert to bind the world of spice and silk to the heart of civilization. Every ship that passes owes its journey to our vision—and pays for the privilege."
+ je_br_persian_strait_toll: "Control over the Persian Straits"
+ je_br_persian_strait_toll_reason: "At the edge of the world’s oldest empires lies a passage narrow as a blade. The Persian Straits are the key to eastern wealth, and to hold them is to control the breath of trade from Hind to Arabia. Here, coin flows like current."
+ je_br_hajj_profits: "Custodians of the Hajj"
+ je_br_hajj_profits_reason: "To hold Mecca is to stand at the crossroads of faith. Each year, thousands make the sacred journey—bringing with them gold, goods, and tribute, whether in devotion or necessity. While the pilgrimage is a duty of the faithful, it is also a current of commerce that flows through our hands. As long as we safeguard the Holy City, we may ensure order… and draw profit from the faithful who walk the path of the Hajj."
  je_br_tithe_profits: "Alms of St Peter"
- je_br_tithe_profits_reason: "Peter's Pence (or Denarii Sancti Petri and "Alms of St Peter") are donations or payments made directly to the Holy See of the Catholic Church."
+ je_br_tithe_profits_reason: "For centuries, the faithful have offered coin to the See of Peter—not merely as tribute, but as a symbol of devotion, obedience, and penitence. Known as Peter’s Pence, these offerings flow from kings and commoners alike, drawn from every corner of Christendom. To control these alms is to wield not just wealth, but influence—the quiet power of expectation, patronage, and forgiveness. In this world of fractured crowns and rising heresies, the treasury of the Church remains an anchor of authority."
  je_restore_north_italy: "Unite Italia settentrionale"  
  je_restore_north_italy_reason: "The northern heart of Italia remains fractured—city-states, republics, duchies, and principalities all clinging to old rivalries, old borders, and old ambitions. But the world is changing, and with it, the fortunes of fragmented nations. To secure our future, we must look beyond ancient divisions. From the Alpine passes to the Po Valley and the Adriatic coast, our strength lies in unity. If we are to thrive in the new century, we must bring all of Italia settentrionale under a single banner—our banner."  
  je_china_reforms_navy: "Naval Reform"
