--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -83,7 +83,7 @@
 
  br_poznan_conference_event.5.t: "Failure of the Poznan Conference"
  br_poznan_conference_event.5.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having broken down in full, it would appear that a diplomatic solution to the Belgian question has eluded Europe once again."
- br_poznan_conference_event.5.f: "As the delegations made their way out of the Foreign Office and onto King Charles Street, the air of amicability that they so deperately tried to maintain could not even fool the doorman — much less each other. What this would mean for future Dutch-Belgian relations they could still not say, but that it would be bad? Now at last, there was something they could agree on."
+ br_poznan_conference_event.5.f: "As the delegations made their way out of the Foreign Office, the air of amicability that they so deperately tried to maintain could not even fool the doorman — much less each other. What this would mean for future German-Swedish relations they could still not say, but that it would be bad? Now at last, there was something they could agree on."
  br_poznan_conference_event.5.a: "What a waste of everybody's time."
  
  br_poznan_conference_event.6.t: "End of the Poznan Conference?"
