India Kefuffle bug fixes

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -522,10 +522,14 @@
  br_slave_event.1: "Event Description"
  br_settler_event.1: "Event Description"
 
- india_kerfuffle.2.t: "In India, stormclouds gather."
- india_kerfuffle.2.d: "The Mughals of the north, opulent and overstretched, eye the south. The rising Maratha Confederations, fierce and mobile, seek to unite the Deccan under their own banner."
- india_kerfuffle.2.f: "Now, the Great Councils of Chrysolithos must choose: fortune favors the bold, but neutrality may be the wiser coin."
- india_kerfuffle.2.a: "We were granted Mughals favor; let us honor that legacy."
- india_kerfuffle.2.b: "We live beside them, trade beside them — we may yet rise beside them."
- india_kerfuffle.2.c: "Let them fight. We guard the harbors and the ledgers."
+ br_india_kerfuffle.1.t: ""
+ br_india_kerfuffle.1.d: ""
+ br_india_kerfuffle.1.f: ""
+ br_india_kerfuffle.1.a: ""
+ br_india_kerfuffle.2.t: "In India, stormclouds gather."
+ br_india_kerfuffle.2.d: "The Mughals of the north, opulent and overstretched, eye the south. The rising Maratha Confederations, fierce and mobile, seek to unite the Deccan under their own banner."
+ br_india_kerfuffle.2.f: "Now, the Great Councils of Chrysolithos must choose: fortune favors the bold, but neutrality may be the wiser coin."
+ br_india_kerfuffle.2.a: "We were granted Mughals favor; let us honor that legacy."
+ br_india_kerfuffle.2.b: "We live beside them, trade beside them — we may yet rise beside them."
+ br_india_kerfuffle.2.c: "Let them fight. We guard the harbors and the ledgers."
  
