--- a/localization/french/br_stettin_conference_l_french.yml
+++ b/localization/french/br_stettin_conference_l_french.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_french:
 
  br_initiator_loc: "[GetGlobalVariable( 'br_stettin_conference_initiator_var' ).GetCountry.GetName]"
  br_initiator_NF_loc: "[GetGlobalVariable( 'br_stettin_conference_initiator_var' ).GetCountry.GetNameNoFormatting]" #NF stands for NoFormatting
@@ -40,8 +40,8 @@
  #Scripted Button loc
  br_fate_of_baltic_duchies_button: "Decide on the fate of $br_baltic_duchies_NF_loc$"
  br_fate_of_baltic_duchies_button_desc: "We will decide on what will happen to the state of $br_baltic_duchies_loc$"
- br_counter_offer_button: "Give a counter offer"
- br_counter_offer_button_desc: "We will decide on if we are going to give $br_target_NF_loc$ a counter offer as compensation for our demands."
+ br_stettin_conference_counter_offer_button: "Give a counter offer"
+ br_stettin_conference_counter_offer_button_desc: "We will decide on if we are going to give $br_target_NF_loc$ a counter offer as compensation for our demands."
  br_we_chose_this_br_stettin_treaty_tt: "[ROOT.GetCountry.GetName] will officially favour this proposal."
  br_we_unchose_this_br_stettin_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
  br_stettin_conference_approve_button: "Ratify the Treaty of Stettin"
