--- a/localization/simp_chinese/br_poznan_conference_l_simp_chinese.yml
+++ b/localization/simp_chinese/br_poznan_conference_l_simp_chinese.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_simp_chinese:
 
  br_ngf_loc: "[GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetName]"
  br_ngf_NF_loc: "[GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]" #NF stands for NoFormatting
