--- a/localization/polish/br_poznan_conference_l_polish.yml
+++ b/localization/polish/br_poznan_conference_l_polish.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+﻿l_polish:
 
  br_ngf_loc: "[GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetName]"
  br_ngf_NF_loc: "[GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]" #NF stands for NoFormatting
