added Celtic religion

--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -21,6 +21,7 @@
  br_religion_shenist: "Shenist"
  br_religion_slavic: "Slavic"
  br_religion_baltic: "Baltic"
+ br_religion_celtic: "Celtic"
 
  #Discrimination
  new_world_pagan: "New World Pagan"
