--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -43,6 +43,8 @@
  br_slavic_religion_swap_decision_desc: "$slavic_decision_desc$"
  br_tengri_religion_swap_decision: "$tengri_decision$"
  br_tengri_religion_swap_decision_desc: "$tengri_decision_desc$"
+ br_celtic_religion_swap_decision: "Return to the Celtic faith"
+ br_celtic_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Celtic faith."
 
 
  #events
