added finno ugric religion

--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -22,6 +22,7 @@
  br_religion_slavic: "Slavic"
  br_religion_baltic: "Baltic"
  br_religion_celtic: "Celtic"
+ br_religion_finno_ugric: "Finno Ugric"
 
  #Discrimination
  new_world_pagan: "New World Pagan"
