--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -45,6 +45,8 @@
  br_tengri_religion_swap_decision_desc: "$tengri_decision_desc$"
  br_celtic_religion_swap_decision: "Return to the Celtic faith"
  br_celtic_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Celtic faith."
+ br_finno_ugric_religion_swap_decision: "Return to the Finno Ugric faith"
+ br_finno_ugric_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Finno Ugric faith."
 
 
  #events
