added akom as a religion

--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -23,6 +23,7 @@
  br_religion_baltic: "Baltic"
  br_religion_celtic: "Celtic"
  br_religion_finno_ugric: "Finno Ugric"
+ br_religion_akom: "Akom"
 
  #Discrimination
  new_world_pagan: "New World Pagan"
