--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -24,6 +24,7 @@
  br_religion_celtic: "Celtic"
  br_religion_finno_ugric: "Finno Ugric"
  br_religion_akom: "Akom"
+ br_religion_fetishist: "Fetishist"
 
  #Discrimination
  new_world_pagan: "New World Pagan"
