--- a/localization/english/br_religion_swap_l_english.yml
+++ b/localization/english/br_religion_swap_l_english.yml
@@ -47,6 +47,8 @@
  br_celtic_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Celtic faith."
  br_akom_religion_swap_decision: "Convert to the $br_religion_akom$ faith"
  br_akom_religion_swap_decision_desc: "@warning! Perhaps it is time to convert and embrace the $br_religion_akom$ faith."
+ br_fetishist_religion_swap_decision: "Return to the Fetishist faith"
+ br_fetishist_religion_swap_decision_desc: "@warning! Perhaps it is time to return to our ancient roots and embrace the Fetishist faith."
 
 
  #events
