Added a new religious heritage

--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -28,6 +28,7 @@
 
  #Discrimination
  new_world_pagan: "New World Pagan"
+ old_world_pagan: "Shamanist Pagan"
  pantheon: "Pantheon"
  eastern_abrahamic: "Abrahamic East"
  western_abrahamic: "Abrahamic West"
